--- a/frontend/src/components/Navbar/Navbar.module.scss
+++ b/frontend/src/components/Navbar/Navbar.module.scss
@@ -5,23 +5,25 @@
     // border: 2px solid red;
     z-index: 5000;
     position: fixed;
-    top: clamp(15px, 5%, 60px);
+    top: clamp(4px, 0.2%, 7px);
     left: $nav-margin-right;
-    padding-top: 15px;
+    padding-top: 45px;
     height: clamp(170px, 13vw, 210px);
-    width: 30px;
+    width: 35px;
     display: flex;
     align-items: center;
     justify-content: center;
+    border-radius: 3px;
     font-family: "Nacelle";
     letter-spacing: 1px;
     font-size: $fontsize-m;
     line-height: 3;
-    // background-color: rgba(241, 239, 239, 0.83); //rgba(251, 247, 247, 0.835)
+    background-color: rgba(241, 239, 239, 0.83); //rgba(251, 247, 247, 0.835)
     -webkit-backdrop-filter: blur(13px);
     backdrop-filter: blur(13px);
-    mix-blend-mode: difference;
-    color: white;
+    // mix-blend-mode: difference;
+    // color: white;
+    color: $primary-color-darkblue;
     &__rotator {
         // border: 2px solid blue;
         transform: rotate(90deg);
@@ -34,6 +36,7 @@
         gap: 8px;
         align-items: center;
         margin-left: 15px;
+        margin-bottom: 2px;
 
         &__playview {
             // border: 2px solid blue;
