--- a/frontend/src/components/PlayView/PlayView.module.scss
+++ b/frontend/src/components/PlayView/PlayView.module.scss
@@ -1,3 +1,4 @@
+@import "../../styles/theme";
 @import "../../styles/font";
 
 .playView {
@@ -7,11 +8,14 @@
     top: 1%;
     right: clamp(30px, 2vw, 50px);
     mix-blend-mode: difference;
-    height: 25px;
+    height: 30px;
     align-items: center;
-    width: clamp(80px, 8vw, 110px);
+    width: clamp(80px, 6vw, 140px);
+    padding: 0px 10px;
     justify-content: space-around;
     // border: 2px solid red;
+    // background-color: rgba(241, 239, 239, 0.83);
+    // border-radius: 3px;
 
     button {
         font-family: "NeueMontreal-Medium";
@@ -24,19 +28,23 @@
     }
 
     &__view {
-        color: white;
+        color: rgb(185, 185, 185);
+        // color: $primary-color-darkblue;
         transition: 0.3s ease-in-out;
     }
     &__viewOff {
         color: rgba(188, 188, 188, 0.383);
+        // color: rgba(129, 127, 127, 0.59);
         transition: 0.3s ease-in-out;
     }
     &__playOff {
         color: rgba(188, 188, 188, 0.383);
+        // color: rgba(129, 127, 127, 0.59);
         transition: 0.3s ease-in-out;
     }
     &__play {
-        color: white;
+        color: rgb(185, 185, 185);
+        // color: $primary-color-darkblue;
         transition: 0.3s ease-in-out;
     }
 }
