--- a/frontend/src/components/Controls/Controls.module.scss
+++ b/frontend/src/components/Controls/Controls.module.scss
@@ -1,3 +1,6 @@
+@import "../../styles/font";
+@import "../../styles/theme";
+
 .controls__blur {
     position: fixed;
     top: 0;
@@ -22,7 +25,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #f1efef;
+    background-color: $white-board-opac;
+    border-radius: 5px;
+    color: $primary-color-darkblue;
 }
 
 .controls {
@@ -37,17 +42,22 @@
     align-items: center;
     height: 100%;
     width: 100%;
+    color: $primary-color-darkblue;
 
     &__keyboard {
         font-family: "NeueMontreal-Medium";
+        font-size: $fontsize-m;
         display: flex;
         justify-content: space-between;
         align-items: center;
         height: 12%;
-        // border: 2px solid rgb(0, 255, 34);
-        width: 25%;
+        margin-top: 20px;
+        width: 20%;
+        min-width: 270px;
+        color: $primary-color-darkblue;
 
         &__ctn {
+            font-family: "NeueMontreal-Medium";
             width: 60%;
             display: flex;
             justify-content: space-between;
@@ -65,6 +75,7 @@
             label {
                 cursor: pointer;
                 color: #8e8c8c;
+                transition: 0.3s ease-in-out;
             }
             input:checked ~ label {
                 color: rgb(24, 23, 23);
@@ -74,25 +85,37 @@
 
     &__space {
         position: relative;
-        width: 100px;
+        width: 150px;
         height: 50px;
 
+        font-size: 22px;
+
         &__front {
+            display: flex;
+            justify-content: center;
             position: absolute;
             top: 0;
             width: 100%;
             height: 100%;
-            border: 1px solid rgb(24, 23, 23);
+            border: 1px solid rgb(125, 125, 125);
             background-color: #f1efef;
+            border-radius: 3px;
             z-index: 3;
+            font-weight: 700;
+            color: #3e3a3a;
+
+            span {
+                margin-top: 4px;
+            }
         }
         &__back {
             position: absolute;
-            top: 10px;
+            top: 7px;
             width: 100%;
             height: 100%;
-            background-color: rgb(100, 100, 100);
-            border: 1px solid rgb(24, 23, 23);
+            background-color: rgb(148, 148, 148);
+            border: 1px solid rgb(125, 125, 125);
+            border-radius: 3px;
             z-index: 1;
         }
     }
@@ -107,23 +130,49 @@
             top: 0;
             width: 100%;
             height: 100%;
-            border: 1px solid rgb(24, 23, 23);
+            border: 1px solid rgb(125, 125, 125);
             background-color: #f1efef;
+            border-radius: 3px;
             z-index: 3;
             // transition: 0.5s ease-in-out;
+            display: flex;
+            justify-content: center;
+            font-weight: 700;
+            font-size: 20px;
+            color: #3e3a3a;
+            &__arrow {
+                width: 19px;
+                height: 22px;
+                margin-top: 6px;
+                // border: 2px solid red;
+                transform: translate(-50%, -50%);
+
+                &__right {
+                    transform: rotate(90deg);
+                }
+                &__left {
+                    transform: rotate(-90deg);
+                }
+            }
         }
 
         &__back {
             position: absolute;
-            top: 10px;
+            top: 7px;
             width: 100%;
             height: 100%;
-            background-color: rgb(100, 100, 100);
-            border: 1px solid rgb(24, 23, 23);
+            background-color: rgb(148, 148, 148);
+            border: 1px solid rgb(125, 125, 125);
+            border-radius: 3px;
             z-index: 1;
         }
         span {
-            font-size: 22px;
+            font-size: 27px;
+            text-align: center;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            color: #3e3a3a;
         }
     }
 
@@ -133,7 +182,7 @@
         justify-content: space-around;
         align-items: center;
         // border: 2px solid red;
-        padding: 0px 100px;
+        padding: 0px 60px;
         width: 100%;
 
         &__keys {
@@ -186,15 +235,17 @@
             display: flex;
             justify-content: center;
             align-items: center;
+
             &__video {
                 width: 80%;
+                overflow: hidden;
             }
         }
     }
 
     &__gotoplay {
         height: 15%;
-        display: flex;
+
         align-items: center;
         // border: 2px solid rgb(0, 0, 255);
         button {
@@ -202,8 +253,26 @@
             border: none;
             background: none;
             font-size: 26px;
-            margin-bottom: 30px;
+            margin-top: 10px;
             font-family: "NeueMontreal-Medium";
+            display: flex;
+            flex-direction: column;
+            height: 26px;
+            overflow: hidden;
+            // border: 2px solid red;
+
+            span {
+                margin: 0;
+                padding: 0;
+                line-height: 0.9;
+                height: 26px;
+                transform: translateY(-100%);
+                transition: 0.3s ease-in-out;
+            }
+        }
+
+        button:hover span {
+            transform: translateY(0%);
         }
     }
 }
