--- a/frontend/src/components/Loader/Loader.module.scss
+++ b/frontend/src/components/Loader/Loader.module.scss
@@ -1,3 +1,6 @@
+@import "../../styles/font";
+@import "../../styles/theme";
+
 .loader {
     position: fixed;
     top: 0;
@@ -21,14 +24,28 @@
         align-items: center;
         flex-direction: column;
 
-        &__ctn {
+        &__logo {
             position: absolute;
-            top: 32%;
-            width: 11%;
+            top: 35%;
+            width: 9%;
             height: 50%;
             // border: 2px solid red;
         }
     }
+}
+
+.settingUp {
+    position: absolute;
+    top: 56%;
+    color: #787777;
+    font-family: "NeueMontreal-Regular";
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: 700;
+    // text-align: left;
+    // width: 300px;
+    // left: 26%;
+    // border: 2px solid red;
 }
 
 .counter__box {
@@ -97,16 +114,19 @@
 .texts {
     opacity: 0;
     position: absolute;
-    bottom: 2%;
     // border: 2px solid blue;
     text-align: center;
 
     font-weight: 200;
-    font-size: 9px;
+    font-size: 12px;
+    height: 98%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
     h2 {
         font-family: "NeueMontreal-Regular";
-        font-weight: 100;
+        font-weight: 200;
         margin: 0;
     }
 }
