--- a/frontend/src/components/Navbar/Navbar.module.scss
+++ b/frontend/src/components/Navbar/Navbar.module.scss
@@ -7,8 +7,8 @@
     position: fixed;
     top: clamp(4px, 0.2%, 7px);
     left: $nav-margin-right;
-    padding-top: 45px;
-    height: clamp(170px, 13vw, 210px);
+    padding-top: 35px;
+    height: 170px;
     width: 35px;
     display: flex;
     align-items: center;
@@ -16,8 +16,7 @@
     border-radius: 3px;
     font-family: "Nacelle";
     letter-spacing: 1px;
-    font-size: $fontsize-m;
-    line-height: 3;
+    font-size: $fontsize-xs;
     background-color: rgba(241, 239, 239, 0.83); //rgba(251, 247, 247, 0.835)
     -webkit-backdrop-filter: blur(13px);
     backdrop-filter: blur(13px);
@@ -35,8 +34,8 @@
         display: flex;
         gap: 8px;
         align-items: center;
-        margin-left: 15px;
-        margin-bottom: 2px;
+        margin-left: 10px;
+        margin-bottom: 5px;
 
         &__playview {
             // border: 2px solid blue;
@@ -79,7 +78,7 @@
     &__sound {
         // border: 2px solid purple;
         margin: 0;
-        margin-left: 10px;
+        margin-left: 0px;
         width: 28px;
         height: 20px;
         display: flex;
