--- a/frontend/src/styles/_font.scss
+++ b/frontend/src/styles/_font.scss
@@ -25,7 +25,8 @@
 
 $fontsize-title: clamp(f.rem(120), 13vw, f.rem(290));
 $fontsize-title-project: clamp(f.rem(90), 8vw, f.rem(220));
-$fontsize-title-second: clamp(f.rem(15), 2vw, f.rem(25));
+$fontsize-title-second: clamp(f.rem(15), 1.3vw, f.rem(22));
+$fontsize-xs: clamp(f.rem(12), 0.8vw, f.rem(16));
 $fontsize-s: clamp(f.rem(14), 1vw, f.rem(22));
 $fontsize-m: clamp(f.rem(15), 1.1vw, f.rem(21));
 $fontsize-l: clamp(f.rem(16), 12px + 0.5vw, f.rem(24));
