--- a/frontend/src/components/Contact/Contact.module.scss
+++ b/frontend/src/components/Contact/Contact.module.scss
@@ -1,3 +1,6 @@
+@import "../../styles/font";
+@import "../../styles/theme";
+
 .contact::-webkit-scrollbar {
     display: none; /* Chrome, Safari, Opera */
 }
@@ -14,6 +17,7 @@
 
     background-color: rgba(236, 233, 233, 0.93);
     color: rgb(44, 40, 40);
+    color: $primary-color-darkblue;
     -webkit-backdrop-filter: blur(13px);
     backdrop-filter: blur(13px);
     font-family: "NeueMontreal-Regular";
@@ -31,6 +35,7 @@
         bottom: 0;
         left: 0;
         right: 0;
+        z-index: 10;
         height: 50px;
         background: rgb(241, 239, 239);
         background: linear-gradient(0deg, rgba(241, 239, 239, 1) 0%, rgba(0, 0, 0, 0) 100%);
@@ -38,10 +43,20 @@
 }
 
 .contact {
-    padding: 40px;
+    padding: 20px 60px;
     height: 100%;
     overflow-y: scroll;
     scrollbar-width: none;
+
+    p {
+        margin-top: 20px;
+        font-family: "NeueMontreal-Regular";
+        font-weight: 400;
+        letter-spacing: 1px;
+        font-size: $fontsize-m;
+        width: 90%;
+        text-align: justify;
+    }
     &__fade {
         position: sticky;
         background: rgb(241, 239, 239);
@@ -72,7 +87,7 @@
     }
     label {
         text-transform: uppercase;
-        font-size: 15px;
+        font-size: $fontsize-s;
         font-weight: 500;
     }
     input {
@@ -80,7 +95,7 @@
         border: none;
         border-bottom: 1px solid rgb(44, 40, 40);
         font-family: "NeueMontreal-Regular";
-        font-size: 20px;
+        font-size: $fontsize-m;
         text-transform: uppercase;
         font-weight: 600;
         padding-bottom: 4px;
@@ -94,12 +109,12 @@
     &__title {
         h2 {
             margin: 0;
-            font-size: 75px;
+            font-size: $fontsize-menu;
         }
     }
 
     &__form {
-        margin-top: 50px;
+        margin-top: 70px;
         display: flex;
         flex-direction: column;
         gap: 25px;
@@ -136,7 +151,7 @@
                     color: rgb(158, 158, 158);
                     transition: 0.3s ease-in-out;
                     cursor: pointer;
-                    font-size: 19px;
+                    font-size: $fontsize-l;
                 }
 
                 input[type="radio"] {
@@ -160,11 +175,12 @@
             gap: 15px;
             textarea {
                 border: 1px solid rgb(44, 40, 40);
+                border-radius: 5px;
                 font-family: "NeueMontreal-Regular";
                 font-weight: 400;
-                font-size: 17px;
+                font-size: $fontsize-m;
                 background: none;
-                height: 130px;
+                height: 170px;
                 resize: none;
                 padding: 10px;
             }
@@ -194,11 +210,12 @@
             &__budget {
                 &__button {
                     border: 1px solid rgb(44, 40, 40);
+                    border-radius: 3px;
                     display: flex;
                     align-items: center;
-
+                    position: relative;
                     justify-content: space-between;
-                    z-index: -1;
+                    z-index: 1;
                     cursor: pointer;
                     button {
                         background: none;
@@ -206,26 +223,34 @@
                         font-size: 16px;
                         font-family: "NeueMontreal-Regular";
                         font-weight: 700;
+                        cursor: pointer;
                     }
 
                     &__span__active {
                         font-size: 25px;
-                        transition: 0.5s ease-in-out;
+                        transition: 0.3s ease-in-out;
+                        -webkit-user-select: none;
+                        user-select: none;
                     }
                     &__span__disable {
                         transform: rotate(180deg);
                         font-size: 25px;
-                        transition: 0.5s ease-in-out;
+                        transition: 0.3s ease-in-out;
+                        -webkit-user-select: none;
+                        user-select: none;
                     }
                 }
 
                 &__select {
                     position: absolute;
+
+                    top: -28px;
+                    left: -1px;
                     background-color: rgba(241, 239, 239);
                     border: 1px solid rgb(44, 40, 40);
                     padding: 10px;
                     display: flex;
-                    width: 230px;
+                    width: 210px;
                     flex-direction: column;
                     gap: 5px;
                     text-transform: uppercase;
@@ -265,7 +290,8 @@
             width: 100%;
             display: flex;
             justify-content: center;
-            margin-top: 20px;
+            margin-top: 30px;
+            margin-bottom: 70px;
             height: 30px;
             // border: 2px solid red;
             overflow: hidden;
