--- a/frontend/src/components/Game/Dialog/Dialog.module.scss
+++ b/frontend/src/components/Game/Dialog/Dialog.module.scss
@@ -17,6 +17,7 @@
     height: 100%;
     background-color: rgb(29, 28, 28);
     border: 3px solid white;
+    border-radius: 5px;
     -webkit-backdrop-filter: blur(7px);
     backdrop-filter: blur(7px);
     z-index: 7000;
