--- a/frontend/src/styles/_font.scss
+++ b/frontend/src/styles/_font.scss
@@ -28,12 +28,14 @@ $fontsize-title: 13vw;
 $fontsize-title-project: clamp(f.rem(90), 8vw, f.rem(220));
 $fontsize-title-second: clamp(f.rem(15), 1.3vw, f.rem(22));
 $fontsize-xs: 0.8vw;
-$fontsize-s: 1vw;
+$fontsize-s: 0.9vw;
+
+$fontsize-m: 1vw;
 // $fontsize-s: clamp(f.rem(14), 1vw, f.rem(22));
-$fontsize-m: clamp(f.rem(15), 1.1vw, f.rem(21));
-$fontsize-m: clamp(f.rem(15), 1.1vw, f.rem(21));
+// $fontsize-m: clamp(f.rem(15), 1.1vw, f.rem(21));
+$fontsize-xl: 2vw;
 $fontsize-l: clamp(f.rem(16), 12px + 0.5vw, f.rem(24));
-$fontsize-xl: clamp(f.rem(20), 12px + 1.5vw, f.rem(28));
+// $fontsize-xl: clamp(f.rem(20), 12px + 1.5vw, f.rem(28));
 
 $fontsize-project: clamp(f.rem(15), 0.9vw, f.rem(22));
 $fontsize-projects: clamp(f.rem(17), 1.3vw, f.rem(24));
