--- a/frontend/src/components/Loader/Loader.module.scss
+++ b/frontend/src/components/Loader/Loader.module.scss
@@ -27,7 +27,7 @@
         &__logo {
             position: absolute;
             top: 35%;
-            width: 9%;
+            width: 7vw;
             height: 50%;
             // border: 2px solid red;
         }
@@ -40,12 +40,8 @@
     color: #787777;
     font-family: "NeueMontreal-Regular";
     text-transform: uppercase;
-    font-size: 12px;
+    font-size: $fontsize-xs;
     font-weight: 700;
-    // text-align: left;
-    // width: 300px;
-    // left: 26%;
-    // border: 2px solid red;
 }
 
 .counter__box {
@@ -95,7 +91,7 @@
         border: none;
         cursor: pointer;
         font-family: "NeueMontreal-Medium";
-        font-size: 32px;
+        font-size: $fontsize-xl;
         z-index: 10;
 
         // border: 2px solid red;
@@ -118,7 +114,7 @@
     text-align: center;
 
     font-weight: 200;
-    font-size: 12px;
+    font-size: $fontsize-s;
     height: 98%;
     display: flex;
     flex-direction: column;
