--- a/frontend/src/styles/_font.scss
+++ b/frontend/src/styles/_font.scss
@@ -29,6 +29,7 @@ $fontsize-title-project: clamp(f.rem(90), 8vw, f.rem(220));
 $fontsize-title-second: clamp(f.rem(15), 1.3vw, f.rem(22));
 $fontsize-xs: 0.8vw;
 $fontsize-s: 0.9vw;
+$fontsize-s-nav: clamp(15px, 1vw, 18px);
 
 $fontsize-m: 1vw;
 // $fontsize-s: clamp(f.rem(14), 1vw, f.rem(22));
