--- a/frontend/src/components/Projects/Projects.module.scss
+++ b/frontend/src/components/Projects/Projects.module.scss
@@ -9,25 +9,42 @@
     height: 100%;
     width: 100%;
     min-height: 50px;
+    position: relative;
 
     &__box__wrapper {
         // border: 2px solid green;
-        width: 92%;
-        height: 80%;
-        position: relative;
-        margin-top: -3.5%;
+        width: 100%;
+        height: 85%;
+        position: absolute;
+        top: 0;
         overflow: hidden;
         -webkit-backdrop-filter: blur(10px);
         backdrop-filter: blur(10px);
         //rgb(230, 228, 228, 0.835); // rgb(230, 228, 228, 0.835)
         background-color: $white-board;
-        border-radius: 5px;
+        border-radius: 0px 0px 5px 5px;
     }
 
     &__box {
         width: 95%;
         height: 100%;
         margin-inline: auto;
+
+        &__titletest {
+            position: absolute;
+            right: 0;
+            h2 {
+                font-family: "OktaNeue";
+                text-transform: uppercase;
+                font-size: 3vw;
+                font-weight: 200;
+                text-align: center;
+                margin: 0;
+                margin-top: 30px;
+                // mix-blend-mode: difference;
+                color: $primary-color-darkblue;
+            }
+        }
         &__title {
             position: absolute;
             z-index: -1;
