--- a/frontend/src/components/Projects/Projects.module.scss
+++ b/frontend/src/components/Projects/Projects.module.scss
@@ -31,6 +31,7 @@
         margin-inline: auto;
         display: flex;
         gap: 100px;
+        // border: 2px solid red;
 
         &__title {
             // position: absolute;
@@ -50,41 +51,52 @@
             }
         }
 
+        &__view {
+            width: 50%;
+            height: 80%;
+            margin-top: 4vw;
+            margin-left: 8vw;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            transition: 0.5s ease-in-out;
+            border-radius: 7px;
+            &__ctn {
+                // border: 2px solid red;
+                top: 0;
+                left: 0;
+                width: 80%;
+                height: 50%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                position: relative;
+                overflow: hidden;
+
+                &__img {
+                    height: 100%;
+                    width: 100%;
+                    overflow: hidden;
+                    opacity: 0;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    padding: 0;
+                    margin: 0;
+                    background-color: antiquewhite;
+                }
+            }
+        }
+
         &__content {
             width: 50%;
-            // border: 2px solid red;
-            margin-left: 5%;
+
+            margin-left: 1%;
 
             display: flex;
             flex-direction: column;
             position: relative;
 
-            &__view {
-                width: 50%;
-                height: 110%;
-                top: -5%;
-                &__ctn {
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    width: 70%;
-                    height: 100%;
-
-                    &__img {
-                        height: 0%;
-                        border-radius: 4px;
-                        overflow: hidden;
-                        opacity: 0;
-                        position: absolute;
-                        top: 0;
-                        left: 0;
-                        bottom: 0;
-                        right: 0;
-                        padding: 0;
-                        margin: 0;
-                    }
-                }
-            }
             &__text {
                 width: 100%;
                 display: flex;
