--- a/frontend/src/styles/_theme.scss
+++ b/frontend/src/styles/_theme.scss
@@ -1,3 +1,4 @@
+// $primary-color-darkblue: #0c1a33;
 $primary-color-darkblue: #091429;
 $primary-color-mediumblue: #091940e1;
 $white-board: rgba(240, 238, 238, 0.874);
