--- a/frontend/src/components/PlayView/PlayView.module.scss
+++ b/frontend/src/components/PlayView/PlayView.module.scss
@@ -13,7 +13,7 @@
     justify-content: space-around;
 
     button {
-        font-family: "Nacelle";
+        font-family: "OktaNeue-Bold";
         letter-spacing: 1px;
         font-size: $fontsize-s-nav;
         cursor: pointer;
