--- a/frontend/src/components/Projects/Projects.module.scss
+++ b/frontend/src/components/Projects/Projects.module.scss
@@ -40,6 +40,7 @@
 
             h2 {
                 font-family: "OktaNeue-SemiBold";
+                // font-family: "OktaNeue-Normal";
                 text-transform: uppercase;
                 font-size: 1.3vw;
                 font-weight: 200;
