--- a/frontend/src/components/Title/Title.module.scss
+++ b/frontend/src/components/Title/Title.module.scss
@@ -2,16 +2,18 @@
 @import "../../styles/font";
 
 .title {
+    position: absolute;
     width: 94%;
     margin-left: 5%;
-    margin-top: 0.2%;
+    margin-top: -2%;
     // border: 2px solid red;
     display: flex;
     flex-wrap: wrap;
+
     &__first,
     &__second {
         width: 100%;
-        font-family: "NeueMontreal-Medium";
+        font-family: "OktaNeue-Bold";
         color: $primary-color-darkblue;
         font-size: $fontsize-title;
         font-weight: 500;
@@ -29,7 +31,7 @@
         align-items: center;
 
         &__text {
-            font-family: "NeueMontreal-Medium";
+            font-family: "OktaNeue-Bold";
             color: $primary-color-darkblue;
             font-size: $fontsize-title;
             font-weight: 500;
@@ -46,13 +48,16 @@
 .smalltext {
     display: flex;
     flex-direction: column;
-    font-family: "NeueMontreal-Medium";
+    font-family: "OktaNeue-SemiBold";
+    // font-family: "OktaNeue-Normal";
+    text-transform: uppercase;
     font-weight: 500;
     letter-spacing: 1px;
-    font-size: $fontsize-title-second;
-    text-transform: uppercase;
+    font-size: 2vw;
+    // text-transform: uppercase;
     color: $primary-color-darkblue;
     // border: 2px solid blue;
+    margin-top: 3vw;
     margin-left: 1vw;
     height: 87%;
 
