--- a/frontend/src/components/Contact/Contact.module.scss
+++ b/frontend/src/components/Contact/Contact.module.scss
@@ -6,29 +6,24 @@
 }
 
 .wrapper {
-    border-radius: 5px;
     z-index: 20000;
     position: fixed;
-    width: 49%;
-    height: 98%;
-    top: 1%;
+    width: 50%;
+    height: 100%;
+    top: 0;
     right: -50%;
     box-sizing: border-box;
 
     background-color: rgba(236, 233, 233, 0.93);
-    color: rgb(44, 40, 40);
-    color: $primary-color-darkblue;
+    color: rgb(39, 38, 45);
+    // color: $primary-color-darkblue;
     -webkit-backdrop-filter: blur(13px);
     backdrop-filter: blur(13px);
     font-family: "NeueMontreal-Regular";
     font-weight: 500;
-
     display: flex;
     flex-direction: column;
     overflow: hidden;
-
-    // border: 2px solid red;
-
     &__fade {
         // border: 2px solid green;
         position: fixed;
