--- a/frontend/src/components/Menu/Menu.module.scss
+++ b/frontend/src/components/Menu/Menu.module.scss
@@ -11,8 +11,8 @@
     min-width: 380px;
     -webkit-backdrop-filter: blur(13px);
     backdrop-filter: blur(13px);
-    font-family: "OktaNeue-Normal";
-    font-weight: 200;
+    font-family: "OktaNeue-Medium";
+    font-weight: 600;
     // border-radius: 5px;
     display: flex;
     flex-direction: column;
@@ -23,7 +23,7 @@
         margin-left: 8%;
         margin-top: 1%;
         display: flex;
-        font-size: 0.9vw;
+        font-size: $fontsize-s;
         align-items: center;
         cursor: pointer;
         &__cross {
@@ -32,7 +32,7 @@
             transition: 0.3s ease-in-out;
         }
     }
-    &__close:hover span {
+    &__close:hover &__close__cross {
         animation: scaled 0.3s forwards;
     }
 
@@ -165,7 +165,7 @@
         transform: scale(1);
     }
     50% {
-        transform: scale(1.1);
+        transform: scale(0.8);
     }
     100% {
         transform: scale(1);
