--- a/frontend/src/components/Projects/Project/Project.module.scss
+++ b/frontend/src/components/Projects/Project/Project.module.scss
@@ -106,6 +106,30 @@
             padding: 0;
             margin-top: 15px;
 
+            &__wrapper {
+                height: calc($fontsize-m + 1px);
+                overflow: hidden;
+                // border: 2px solid red;
+            }
+            &__live {
+                font-family: "OktaNeue-Medium";
+                color: $primary-color-darkblue;
+                font-weight: 500;
+                font-size: $fontsize-m;
+                gap: 5px;
+                display: flex;
+                align-items: center;
+                line-height: 1;
+                cursor: pointer;
+                transform: translateY(-100%);
+                transition: 0.3s ease-in-out;
+                height: calc($fontsize-m + 2px);
+            }
+
+            &__wrapper:hover &__live {
+                transform: translateY(0%);
+            }
+
             &__svg {
                 width: 12px;
                 margin-top: 2px;
@@ -115,17 +139,6 @@
                 padding: 0;
                 text-align: left;
                 font-size: $fontsize-xl;
-            }
-
-            span {
-                font-family: "NeueMontreal-Regular";
-                color: $primary-color-darkblue;
-                font-weight: 500;
-                font-size: $fontsize-s;
-                gap: 5px;
-                display: flex;
-                align-items: center;
-                // border: 2px solid rgb(27, 200, 56);
             }
 
             &__ask {
@@ -215,11 +228,12 @@
             margin: 0;
             padding: 0;
             width: 100%;
+            font-size: $fontsize-m;
             // text-align: justify;
         }
         h3 {
             font-family: "OktaNeue-Medium";
-            font-size: 1.2vw;
+            font-size: 1vw;
             margin: 0;
             margin-top: 5px;
             margin-bottom: 7px;
